--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,11 @@
   <groupId>ici.netcompany</groupId>
   <artifactId>maven-quick-start</artifactId>
   <version>1.0</version>
+  
+  <!-- compiler will use Java 8. The default source setting is 1.5! -->
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
 </project>
