--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+  <!-- List of dependencies in our project -->
+  <dependencies>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.7</version>
+      </dependency>
+  </dependencies>
 </project>
