--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,26 @@
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<project
+        xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ici.netcompany</groupId>
-  <artifactId>maven-quick-start</artifactId>
-  <version>1.0</version>
-  
-  <!-- compiler will use Java 8. The default source setting is 1.5! -->
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
 
-  <!-- List of dependencies in our project -->
-  <dependencies>
-      <dependency>
-          <groupId>org.apache.commons</groupId>
-          <artifactId>commons-lang3</artifactId>
-          <version>3.7</version>
-      </dependency>
-  </dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ici.netcompany.training</groupId>
+    <artifactId>maven-quick-start</artifactId>
+    <version>1.0</version>
+
+    <!-- compiler will use Java 8. The default source setting is 1.5! -->
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <!-- List of dependencies in our project -->
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+    </dependencies>
 </project>
